# OSMP_CPY

./: .gitignore  CMakeLists.txt  README.md  build.sh  sanerror  sanerror2
.cmake/: functions.cmake
docs/: Termin1.md
src/osmpExecutables/: echoAll.c
src/osmpLibrary/: OSMP.h  osmpLib.c  osmpLib.h
src/osmpRunner/: osmpRun.c  osmpRun.h  runner_exec.c  runner_exec.h  runner_log.c  runner_log.h  runner_parse.c  runner_parse.h
